--- a/src/style.css
+++ b/src/style.css
@@ -91,3 +91,19 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 75px;
+  }
+
+  h2,
+  p {
+    text-align: center;
+  }
+
+  .projects-links {
+    display: block;
+    text-align: center;
+  }
+}
